--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,1 +1,17 @@
 /* You can add global styles to this file, and also import other style files */
+
+html, body { height: 100%; }
+body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
+mat-list-item{
+  height: unset !important;
+}
+*{
+  box-sizing: border-box;
+}
+.transparent-bck .mat-dialog-container{
+  background: transparent !important;
+  justify-content: center;
+  align-items: center;
+  box-shadow: none;
+  display: flex;
+}
