--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,5 +1,4 @@
 /* You can add global styles to this file, and also import other style files */
-
 html, body { height: 100%; }
 body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
 mat-list-item{
@@ -14,4 +13,7 @@ mat-list-item{
   align-items: center;
   box-shadow: none;
   display: flex;
+}
+mat-drawer-container{
+    min-height: 100vh;
 }
