--- a/src/app/dashboard/dashboard-card/dashboard-card.component.html
+++ b/src/app/dashboard/dashboard-card/dashboard-card.component.html
@@ -5,5 +5,6 @@
     </div>
     <p>{{texte}}</p>
   </div>
-  <span>{{nombre}}</span>
+  <span *ngIf="!loading">{{nombre}}</span>
+  <mat-spinner *ngIf="loading"></mat-spinner>
 </div>
