--- a/src/app/dashboard/dashboard-page/dashboard-page.component.scss
+++ b/src/app/dashboard/dashboard-page/dashboard-page.component.scss
@@ -2,3 +2,32 @@
   background: ghostwhite;
   padding: 1rem;
 }
+app-dashboard-card{
+  margin-top: 15px;
+}
+.row.cards .col-md-3{
+  padding-top: 15px;
+}
+mat-card.timeline-card{
+  margin-top: 15px;
+  padding: 15px;
+  min-height: 400px;
+  ngx-charts-line-chart{
+    width: 100%;
+  }
+}
+.card-title{
+  display: block;
+  width: 100%;
+  color:white;
+  font-weight: bold;
+  text-align: center;
+  padding: 15px;
+  border-radius: 4px;
+  background: dodgerblue;
+}
+.card-container{
+  width: 100%;
+  height: 250px;
+
+}
