--- a/src/app/assigments/add-assignment/add-assignment.component.html
+++ b/src/app/assigments/add-assignment/add-assignment.component.html
@@ -1,24 +1,109 @@
-<form class="form" ngForm #assignmentForm>
-  <mat-form-field>
-    <mat-label>Nom : </mat-label>
-    <input matInput #nomAssignment
-           name="nom"
-           placeholder="Nom"
-           [(ngModel)]="nomDevoir" />
-  </mat-form-field>
-  <mat-form-field>
-    <mat-label>Date : </mat-label>
-    <input matInput #dateAssignement
-           name="Date"
-           [matDatepicker]="picker"
-           placeholder="Date"
-           [(ngModel)]="dateDevoir" />
-    <mat-datepicker-toggle matSuffix [for]="picker"></mat-datepicker-toggle>
-    <mat-datepicker #picker></mat-datepicker>
-  </mat-form-field>
-  <button mat-stroked-button
-          (click)="submit();assignmentForm.reset()"
+<mat-horizontal-stepper [linear]="isLinear" #stepper>
+  <mat-step [stepControl]="firstFormGroup">
+    <form [formGroup]="firstFormGroup" (ngSubmit)="nameSubmit()">
+      <ng-template matStepLabel>Ecrivez le nom de l'assignment</ng-template>
+      <mat-form-field>
+        <mat-label>Nom</mat-label>
+        <input matInput placeholder="Last name, First name" formControlName="firstCtrl" required>
+      </mat-form-field>
+      <div>
+        <button mat-button matStepperNext>Suivant</button>
+      </div>
+    </form>
+  </mat-step>
+  <mat-step [stepControl]="secondFormGroup">
+    <form [formGroup]="secondFormGroup" (ngSubmit)="dateSubmit()">
+      <ng-template matStepLabel>Ecrivez la date de rendu</ng-template>
+      <mat-form-field>
+        <mat-label>Date : </mat-label>
+        <input matInput #dateAssignement
+               name="Date"
+               [matDatepicker]="picker"
+               placeholder="Date"
+               [(ngModel)]="dateDevoir" [ngModelOptions]="{standalone: true}"/>
+        <mat-datepicker-toggle matSuffix [for]="picker"></mat-datepicker-toggle>
+        <mat-datepicker #picker></mat-datepicker>
+      </mat-form-field>
+      <div>
+        <button mat-button matStepperPrevious>Précedent</button>
+        <button mat-button matStepperNext>Suivant</button>
+      </div>
+    </form>
+  </mat-step>
+  <mat-step [stepControl]="ThirdFormGroup">
+    <form [formGroup]="ThirdFormGroup" (ngSubmit)="matiereSubmit()">
+      <ng-template matStepLabel>Sélectionnez la matière</ng-template>
+      <mat-form-field>
+        <mat-label>Matiere</mat-label>
+        <mat-select [(ngModel)]="matiereItem" [ngModelOptions]="{standalone: true}">
+          <mat-option *ngFor="let matiere of matieres" [value]="matiere._id">
+            {{matiere.nomMatiere}}
+          </mat-option>
+        </mat-select>
+      </mat-form-field>
+      <div>
+        <button mat-button matStepperPrevious>Précedent</button>
+        <button mat-button matStepperNext>Suivant</button>
+      </div>
+    </form>
+  </mat-step>
+  <mat-step [stepControl]="FourthFormGroup">
+    <form [formGroup]="FourthFormGroup" (ngSubmit)="eleveSubmit()">
+      <ng-template matStepLabel>Sélectionnez l'élève</ng-template>
+      <mat-form-field>
+        <mat-label>Elève</mat-label>
+        <mat-select [(ngModel)]="eleveItem" [ngModelOptions]="{standalone: true}">
+          <mat-option *ngFor="let eleve of eleves" [value]="eleve._id">
+            {{eleve.nom}} {{eleve.prenom}}
+          </mat-option>
+        </mat-select>
+      </mat-form-field>
+      <div>
+        <button mat-button matStepperPrevious>Précedent</button>
+        <button mat-button matStepperNext>Suivant</button>
+      </div>
+    </form>
+  </mat-step>
+  <mat-step [stepControl]="fifthFormGroup">
+    <form [formGroup]="fifthFormGroup" (ngSubmit)="noteSubmit()">
+      <ng-template matStepLabel>Ecrivez la note</ng-template>
+      <mat-form-field>
+        <mat-label>Note</mat-label>
+        <input matInput placeholder="10" formControlName="noteCtrl" required>
+      </mat-form-field>
+      <div>
+        <button mat-button matStepperPrevious>Précedent</button>
+        <button mat-button matStepperNext>Suivant</button>
+      </div>
+    </form>
+  </mat-step>
+  <mat-step [stepControl]="sixthFormGroup">
+    <form [formGroup]="sixthFormGroup" (ngSubmit)="remarqueSubmit()">
+      <ng-template matStepLabel>Ecrivez une remarque</ng-template>
+      <mat-label>Remarque</mat-label>
+        <ngx-editor-menu [editor]="remarqueeditor"> </ngx-editor-menu>
+          <ngx-editor
+            [editor]="remarqueeditor"
+            placeholder="Type here..."
+            formControlName="remarqueItem"
+          ></ngx-editor>
+      <div>
+        <button mat-button matStepperPrevious>Précedent</button>
+        <button mat-button matStepperNext>Suivant</button>
+      </div>
+    </form>
+  </mat-step>
+  <mat-step>
+    <ng-template matStepLabel>Done</ng-template>
+    <p>Vous avez terminer</p>
+    <div>
+      <button mat-button matStepperPrevious>Précedent</button>
+      <button mat-button (click)="stepper.reset()">Reset</button>
+      <button mat-stroked-button
+          (click)="submit();stepper.reset()"
           color="primary">
     Sauver
   </button>
-</form>
+    </div>
+</mat-step>
+</mat-horizontal-stepper>
