--- a/src/app/assigments/single-assignment/single-assignment.component.html
+++ b/src/app/assigments/single-assignment/single-assignment.component.html
@@ -1,23 +1,33 @@
 <mat-card>
-  <mat-card-title>{{assignment.dateDeRendu | date}}</mat-card-title>
-  <mat-card-subtitle>Narindra RANDRIANARISOA</mat-card-subtitle>
-  <div class="image-item">
-    <img mat-card-image src="https://angular.io/assets/images/logos/angular/angular.svg" alt="Angular mat">
-    <img mat-card-image src="https://image.freepik.com/vecteurs-libre/vecteur-icone-homme-affaires_52756-255.jpg" alt="Angular mat">
+  <div class="round-logo-matiere" *ngIf="this.assignment.matiere">
+    <mat-icon>{{this.assignment.matiere.iconeMatiere}}</mat-icon>
   </div>
-  <nav>
-    <a routerLink="/main/assignment/{{assignment._id}}">
-      <mat-list-item>
-        <div class="liste-item">
-          <h3 appRendu *ngIf="assignment.rendu; else nonsoumis" >
-            Devoir intitulé {{assignment.nom}}
-          </h3>
-          <ng-template #nonsoumis>
-            <h3>Le devoir {{assignment.nom}} n'a pas été rendu.</h3>
-          </ng-template>
-          <mat-divider></mat-divider>
-        </div>
-      </mat-list-item>
-    </a>
-  </nav>
+  <div class="content">
+    <div class="logo-content">
+
+    </div>
+    <div class="title-content">
+      <mat-card-title>{{assignment.nom}}</mat-card-title>
+      <mat-card-subtitle>Narindra RANDRIANARISOA</mat-card-subtitle>
+      <mat-chip-list aria-label="Fish selection">
+        <mat-chip>{{this.assignment.dateDeRendu | date}}</mat-chip>
+        <mat-chip color="primary" selected>{{this.assignment.matiere.nomMatiere}}</mat-chip>
+        <mat-chip color="danger" *ngIf="assignment.note" color="danger" selected>
+          {{this.assignment.note}} / 20
+        </mat-chip>
+      </mat-chip-list>
+    </div>
+    <div class="toolbox-content">
+      <div style="background: orangered">
+          <mat-icon>
+            {{assignment.rendu ? 'star' : 'star_outline'}}
+          </mat-icon>
+      </div>
+      <div style="background: cornflowerblue">
+        <mat-icon>
+          info
+        </mat-icon>
+      </div>
+    </div>
+  </div>
 </mat-card>
