--- a/src/app/assigments/single-assignment/single-assignment.component.html
+++ b/src/app/assigments/single-assignment/single-assignment.component.html
@@ -23,7 +23,7 @@
             {{assignment.rendu ? 'star' : 'star_outline'}}
           </mat-icon>
       </div>
-      <div style="background: cornflowerblue" (click)="information(this.assignment._id)" (click)="info()">
+      <div style="background: cornflowerblue" (click)="info()">
         <mat-icon>
           info
         </mat-icon>
