--- a/src/styles.scss
+++ b/src/styles.scss
@@ -17,3 +17,10 @@ mat-list-item{
 mat-drawer-container{
     min-height: 100vh;
 }
+.flex-content-centered{
+  display:flex;
+  justify-content: center;
+  align-items: center;
+  width: 100%;
+  height: 100%;
+}
