--- a/src/app/assigments/assignment-detail/assignment-detail.component.scss
+++ b/src/app/assigments/assignment-detail/assignment-detail.component.scss
@@ -8,3 +8,196 @@ mat-list-item{
   padding: 15px 0;
   justify-content: space-between;
 }
+mat-card{
+  padding: 0;
+  overflow: hidden;
+}
+.left-content{
+  position: relative;
+  align-self: stretch;
+  .skewer{
+    width: 100%;
+    position: absolute;
+    left: 0;
+    top: 0;
+    height: 100%;
+    &:before{
+      width: 20rem;
+      height: 100%;
+      position: absolute;
+      left: -7.5rem;
+      content: '';
+      top: 0;
+      transform: skewX(25deg);
+      background: white;
+      z-index: 49;
+    }
+  }
+  height: 100%;
+  width: 100%;
+  display: flex;
+  justify-content: flex-start;
+  align-items: center;
+  background: cornflowerblue;
+  .icon{
+    z-index: 50;
+    mat-icon{
+      color: cornflowerblue;
+      font-size: 8rem;
+      width: 8rem;
+      height: 8rem;
+      margin: 2rem;
+    }
+  }
+  .rendu-div{
+    width: 100%;
+    position: relative;
+    height: 100%;
+    z-index: 51;
+    &.nonrendu{
+      &:after{
+        width: 10rem;
+        cursor: pointer;
+        position: absolute;
+        right: -4rem;
+        height: 11rem;
+        content: "";
+        bottom: -10rem;
+        transform: skewX(
+            25deg
+        );
+        background: red;
+      }
+    }
+    &.rendu{
+      &:after{
+        width: 10rem;
+        cursor: pointer;
+        position: absolute;
+        right: -4rem;
+        height: 11rem;
+        content: "";
+        bottom: -10rem;
+        transform: skewX(
+            25deg
+        );
+        background: darkseagreen;
+      }
+    }
+  }
+}
+.right-content{
+  position: relative;
+  background: cornflowerblue;
+  height: 100%;
+  width: 100%;
+  .top{
+    padding: 15px;
+    position: relative;
+    display: flex;
+    .top-text{
+      display: flex;
+      width: 100%;
+      justify-content: space-between;
+      align-items: center;
+      z-index: 50;
+    }
+    .top-skewer{
+      width: 100%;
+      height: 100%;
+      z-index: 49;
+      position: absolute;
+      left: 0;
+      top: 0;
+      background: white;
+      transform: skew(25deg);
+    }
+    h1{
+      margin-bottom: 0;
+    }
+    .date{
+      text-transform: uppercase;
+      padding-right: 15px;
+      font-size: 2rem;
+      line-height: 2rem;
+    }
+  }
+  .bottom{
+    width: 100%;
+    overflow: hidden;
+  }
+}
+.content{
+  width: 100%;
+  height: 100%;
+  padding: 15px;
+}
+.col{
+  padding: 0;
+}
+.image-container {
+  border-radius: 4px;
+  height: 100%;
+  overflow: hidden;
+  max-height: 250px;
+  display: flex;
+  width: 100%;
+  justify-content: center;
+  background-color: white;
+  align-items: center;
+  background-size: contain;
+  background-position: center;
+  background-repeat: no-repeat;
+  box-shadow: 0 1px 1px rgba(0,0,0,0.25),
+  0 2px 2px rgba(0,0,0,0.20),
+  0 4px 4px rgba(0,0,0,0.15),
+  0 8px 8px rgba(0,0,0,0.10),
+  0 16px 16px rgba(0,0,0,0.05);
+}
+.prepend-input{
+  display: flex;
+  justify-content: flex-start;
+  align-items: stretch;
+  margin-bottom: 15px;
+  p{
+    margin-bottom: 0;
+  }
+  p:nth-child(1){
+    flex: 1;
+    background: darkblue;
+    color: white;
+    display: block;
+    padding: 15px;
+    text-align: center;
+  }
+  p:nth-child(2){
+    flex: 2;
+    display: block;
+    padding: 15px;
+    background: white;
+    color: black;
+  }
+}
+.prepend-input.note-input > p{
+
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+.note{
+  flex: 2;
+  display: flex;
+  background: dodgerblue;
+  color:white;
+  font-weight: bold;
+  strong{
+    flex: 1;
+    padding: 15px;
+    line-height: 6rem;
+    text-align: center;
+    font-size: 6rem;
+  }
+  strong:nth-child(1){
+    border-right: 1px solid white;
+  }
+}
