--- a/src/app/assigments/single-assignment/single-assignment.component.html
+++ b/src/app/assigments/single-assignment/single-assignment.component.html
@@ -10,15 +10,15 @@
       <mat-card-title>{{assignment.nom}}</mat-card-title>
       <mat-card-subtitle>Narindra RANDRIANARISOA</mat-card-subtitle>
       <mat-chip-list aria-label="Fish selection">
-        <mat-chip>{{this.assignment.dateDeRendu | date}}</mat-chip>
+        <mat-chip selected>{{this.assignment.dateDeRendu | date}}</mat-chip>
         <mat-chip color="primary" selected>{{this.assignment.matiere.nomMatiere}}</mat-chip>
-        <mat-chip *ngIf="assignment.note" color="accent" selected>
+        <mat-chip *ngIf="assignment.note!=null && assignment.note!=undefined" color="accent" selected>
           {{this.assignment.note}} / 20
         </mat-chip>
       </mat-chip-list>
     </div>
     <div class="toolbox-content">
-      <div style="background: orangered" (click)="this.rendre.emit(this.assignment)">
+      <div style="background: orangered" (click)="this.assignment.rendu ? this.rendre.emit(this.assignment) : ''">
           <mat-icon>
             {{assignment.rendu ? 'star' : 'star_outline'}}
           </mat-icon>
